# PersonalAssistant

./: .pre-commit-config.yaml  AGENTS.md  README.md  REVIEWER.md  pyproject.toml  skills-lock.json
.omx/: metrics.json
.omx/logs/: turns-2026-05-18.jsonl
.omx/state/: subagent-tracking.json  update-check.json
src/jira/: __main__.py  agent.py  cli.py  jira_client.py  settings.py  tools.py  ui.py
src/personal_assistant/: assistant.py  cli.py  settings.py  ui.py
src/personal_assistant/agents/: base.py  gitlab.py  jira.py
src/personal_assistant/clients/: base.py  gitlab.py  jira.py
src/personal_assistant/services/: gitlab_mr.py  jira_code_review.py
src/personal_assistant/tools/: jira.py
tests/: test_cli.py  test_gitlab_client.py  test_gitlab_review_agent.py  test_tools.py
