[project]
name = "personalassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "pydantic-ai>=1.94.0",
    "pydantic-settings>=2.9.0",
    "rich>=13.9.0",
]

[project.scripts]
jira = "jira.cli:main"
assistant = "jira.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jira"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]
